fix z-index modal

--- a/css/admin.css
+++ b/css/admin.css
@@ -30,7 +30,7 @@
   left: 0;
   top: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 1000;
 }
 
 body {
